--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node bin/www"
+    "dev": "nodemon bin/www",
+    "debug": "set DEBUG=app:* & nodemon bin/www app:*> debug.log"
   },
   "author": "wpq",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.1.4"
+    "koa-views": "^6.1.4",
+    "moment": "^2.22.2",
+    "mongoose": "^5.2.7"
   }
 }
